Fixed bug with overflowing footer

--- a/main/static/src/css/_partials/article-view.less
+++ b/main/static/src/css/_partials/article-view.less
@@ -353,6 +353,9 @@
 	right: -250px;
 	top: 0;
 	font-family: @sans-font;
+	@media screen and (max-width: @md ){
+		display: none;
+	}
 
 }
 
