--- a/main/static/src/css/_partials/footer.less
+++ b/main/static/src/css/_partials/footer.less
@@ -9,6 +9,7 @@
 	z-index: 999;
 	font-size: 1.2em;
 	line-height: 60px;
+	padding-left: 4em;
 	top: 50%;
 	.translateY(-50%);
 	width: 100%;
@@ -32,9 +33,8 @@
 #footer {
 	border-top: 1px solid rgba(0,0,0,.06);
 	position: relative;
-	width: 100%;
+	width: auto;
 	clear: both;
-	padding: 0 4em;
 	background-color: #fefefe;
 	p {
 		display: block;
