--- a/main/static/src/css/_partials/index.less
+++ b/main/static/src/css/_partials/index.less
@@ -5,6 +5,7 @@
 	overflow: auto;
 	padding-left: 0;
 	margin-bottom: 48px;
+	overflow-x: hidden;
 	@media screen and (max-width: @md){
 		padding: 1%;
 	}
