--- a/main/static/src/css/main.less
+++ b/main/static/src/css/main.less
@@ -20,7 +20,7 @@
 // Serif font used in articles
 @body-font: 'Georgia', 'Times New Roman', Times, serif;
 // Sans font used in titles
-@sans-font:  'Open Sans','Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans','Gill Sans', Verdana, sans-serif;
+@sans-font: 'Open Sans','Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans','Gill Sans', Verdana, sans-serif;
 
 @yellow: #fcc41e;
 @rose-red: #ff5c39;
@@ -61,7 +61,7 @@ h6
 	text-rendering: optimizeLegibility;
 	-webkit-font-smoothing: antialiased;
 	color: @black-70;
-	-webkit-text-stroke: 1px rgba(0,0,0,0,0.1);
+	// -webkit-text-stroke: 1px rgba(0,0,0,0,0.1);
 }
 a, p, li {
 	-webkit-font-smoothing: antialiased;
